@@ -731,8 +731,7 @@ function host_edit() {
 	if (!isempty_request_var('id')) {
 		$_SESSION['cur_device_id'] = get_request_var('id');
 
-		$host = db_fetch_row_prepared(
-			'SELECT *
+		$host = db_fetch_row_prepared('SELECT *
 			FROM host
 			WHERE id = ?',
 			array(get_request_var('id'))
@@ -749,6 +748,9 @@ function host_edit() {
 
 			$repop_link = "<span class='linkMarker'>*</span><a class='hyperLink' href='" . html_escape('host.php?action=repopulate&host_id=' . $host['id']) . "'>" . __('Repopulate Poller Cache') . '</a><br>';
 			$repop_link .= "<span class='linkMarker'>*</span><a class='hyperLink' href='" . html_escape('utilities.php?poller_action=-1&action=view_poller_cache&host_id=' . $host['id'] . '&template_id=-1&filter=&rows=-1') . "'>" . __('View Poller Cache') . '</a><br>';
+
+			/* append uptime data */
+			$header_label .= __(' [ In state since \'%s\', Uptime since \'%s\' ]', get_timeinstate($host, true), get_uptime($host, true));
 		}
 	} else {
 		$_SESSION['cur_device_id'] = 0;
