@@ -59,6 +59,7 @@ Cacti CHANGELOG
 -feature#5165: DSSTATS - Change data_source_stats_hourly_cache from Memory to INNODB
 -feature#5178: DSSTATS - Allow Retention of Daily, Weekly, Monthly and Yearly data for varying periods
 -feature#5215: DSSTATS - Cache the RRDtool Logic in a table to speed calculation of the staticis gathering
+-feature#5231: When editing a Device show in state/uptime as a date in the header
 -feature#5273: Add support for RRD --left-axis-format Options
 -feature#5278: Enhance Cacti's ping to use fping if it's installed to take advantage of sub-second timeouts
 -feature#5305: Remove files aggregate_items.php and color_templates_items.php and consolidate into their parents
